--- a/Changelog.txt
+++ b/Changelog.txt
@@ -23,6 +23,37 @@
 # - title by author
 # }}}
 
+{{{ 6.7.0 2022-10-14
+
+:: new features
+
+- Template language: A new "Python template mode" which allows using arbitrary Python code in templates
+
+- [1992273] Tag browser: Allow removing format from selected books by right clicking on the format in the Tag browser
+
+- [1991597] E-book viewer: Ask for confirmation when creating a highlight that will overwrite existing highlights
+
+- Book list: Allow changing column widths via a dedicated dialog by right clicking on column headers
+
+:: bug fixes
+
+- [1992278] E-book viewer: Fix a regression that broke adding of new lookup sources
+
+- [1991504] E-book viewer: Fix copy to clipboard not ignoring text from elements that are marked as non user selectable
+
+- [1992244] Content server: When adding books, run all file type plugins before reading metadata
+
+- Edit book: Preview panel: In dark mode when all of the background/foreground/link colors are set to "No change" do not render the book using dark colors
+
+:: improved recipes
+- The Athletic
+- der Standard
+- The Economic Times India Print Edition
+- Indian Express
+- India Today Magazine
+- Caravan Magazine
+}}}
+
 {{{ 6.6.1 2022-09-30
 
 :: new features
